# conges_backend

./: INIT_DATABASE.md  README.md  __init__.py  add_annulation_fields.py  add_attestation_fields.py  add_attestation_url_field.py  add_working_time_fields.py  arithmetic_formatter.py  assign_chef_rh.py  conge_old.db  conges.db  conges_old.db  create_notifications_table.py  create_rh_department.py  create_test_users.py  fix_attestation_urls.py  fix_existing_demandes.py  fix_uuid_format.py  init_db.py  main.py  pyproject.toml  recreate_db.py  run.py  setup_rh_department.py  tache_rappels_automatiques.py  test_api.py  test_api_user.py  test_conges.py  test_date_calculator.py  test_new_features.py  test_routes_direct.py  test_routes_list.py  test_schema.py
middlewares/: __init__.py  error_handling.py  logging_middleware.py
models/: __init__.py  database.py  demande_conge.py  departement.py  notification.py  user.py
routes/: __init__.py  auth.py  demandes_conges.py  departements.py  notifications.py  users.py
services/: notification_service.py
utils/: __init__.py  auth.py  create_admin.py  date_calculator.py  dependencies.py
