[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.115.13",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "uvicorn[standard]>=0.32.1",
    "requests>=2.32.4",
]
